# heretic_nu

./: .gitignore  Cargo.toml  README.md
src/: debug_x.rs  default_config.nu  lib.rs  main.rs  step_debug.rs  step_debug_client.nu  step_debug_server.nu
src/commands/: debug.rs  evil.rs  here_span.rs  mod.rs  run_tests.rs  version.rs
