[package]
name = "mini-nu-shell"
version = "0.1.0"
authors = ["Jan9103"]
edition = "2021"

[profile.dev]
stip = false
opt-level = 0
lto = false
codegen-units = 16
panic = "unwind"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []
embed-app = []

[dependencies]
nu-cli      = "0.106.0"
nu-command  = "0.106.0"
nu-protocol = "0.106.0"
nu-cmd-lang = "0.106.0"
nu-engine   = "0.106.0"
nu-parser   = "0.106.0"
