[package]
name = "heretic_nu"
version = "0.1.0"
authors = ["Jan9103"]
edition = "2021"

[profile.dev]
strip = false
opt-level = 0
lto = false
codegen-units = 16
panic = "unwind"

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"

[features]
default = []

[dependencies]
nu-cli      = "0.108.0"
nu-command  = "0.108.0"
nu-protocol = "0.108.0"
nu-cmd-lang = "0.108.0"
nu-engine   = "0.108.0"
nu-parser   = "0.108.0"

pico-args = "0.5.0"

[dependencies.subansi]
git = "https://github.com/Jan9103/subansi"
ref = "9e2fe23275aa877f4c32b972a8eb9e335f5feb4e"
default-features = false
features = ["fast"]
optional = true
