[package]
name = "heretic_nu"
version = "0.1.0"
authors = ["Jan9103"]
edition = "2021"

[profile.dev]
strip = false
opt-level = 0
lto = false
codegen-units = 16
panic = "unwind"

# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"

[features]
default = ['nu_std', 'nu_cmd_extra', 'nu_explore', 'heretic_step_debug', 'heretic_const_evil', 'heretic_test']

heretic_step_debug = ['dep:nuon']
heretic_const_evil = ['dep:nuon']
heretic_test = []

nu_std = ['dep:nu-std']
nu_cmd_extra = ['dep:nu-cmd-extra']
nu_explore = ['dep:nu-explore']

[dependencies]
nu-cli        = {version = "0.109.1", optional = false}
nu-command    = {version = "0.109.1", optional = false}
nu-protocol   = {version = "0.109.1", optional = false}
nu-cmd-lang   = {version = "0.109.1", optional = false}
nu-engine     = {version = "0.109.1", optional = false}
nu-parser     = {version = "0.109.1", optional = false}
nu-path       = {version = "0.109.1", optional = false}
nu-utils      = {version = "0.109.1", optional = false}
nuon          = {version = "0.109.1", optional = true}
nu-cmd-extra  = {version = "0.109.1", optional = true}
nu-explore    = {version = "0.109.1", optional = true}
nu-std        = {version = "0.109.1", optional = true}

pico-args = "0.5.0"

[dependencies.subansi]
git = "https://github.com/Jan9103/subansi"
ref = "9e2fe23275aa877f4c32b972a8eb9e335f5feb4e"
default-features = false
features = ["fast"]
optional = true
